# Engram

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TASK.md
claude-integration/: install.sh  settings.json  uninstall.sh
claude-integration/commands/: init-project.md  init-project.sh  refresh-context.md  refresh-context.sh  scout-status.md  scout-status.sh
claude-integration/hooks/: common.sh  post_tool_use.sh  pre_compact.sh  pre_tool_use.sh  session_end.sh  session_start.sh  subagent_start.sh  subagent_stop.sh  user_prompt.sh
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-context/: Cargo.toml
crates/engram-context/src/: error.rs  lib.rs  manager.rs  memory.rs  render.rs  router.rs  scope.rs
crates/engram-context/tests/: integration_context.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: config.rs  error.rs  lib.rs  metrics.rs  project.rs  project_manager.rs
crates/engram-daemon/: Cargo.toml
crates/engram-daemon/src/: daemon.rs  handler.rs  main.rs
crates/engram-daemon/tests/: integration_daemon.rs
crates/engram-indexer/: Cargo.toml
crates/engram-indexer/src/: error.rs  lib.rs
crates/engram-indexer/src/scanner/: mod.rs  parser.rs  walker.rs
crates/engram-indexer/src/storage/: experience.rs  mod.rs
crates/engram-indexer/src/tree/: mod.rs
crates/engram-indexer/tests/: integration_indexer.rs
crates/engram-ipc/: Cargo.toml
crates/engram-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/engram-ipc/tests/: hook_protocol_alignment.rs  integration_ipc.rs
crates/treerag-cli/: Cargo.toml
crates/treerag-cli/src/: main.rs
crates/treerag-context/: Cargo.toml
crates/treerag-context/src/: error.rs  lib.rs  manager.rs  memory.rs  render.rs  router.rs  scope.rs
crates/treerag-context/tests/: integration_context.rs
crates/treerag-core/: Cargo.toml
crates/treerag-core/src/: config.rs  error.rs  lib.rs  metrics.rs  project.rs  project_manager.rs
crates/treerag-daemon/: Cargo.toml
crates/treerag-daemon/src/: daemon.rs  handler.rs  main.rs  signals.rs
crates/treerag-daemon/tests/: integration_daemon.rs
crates/treerag-indexer/: Cargo.toml
crates/treerag-indexer/src/: lib.rs  watcher.rs
crates/treerag-indexer/src/scanner/: framework.rs  language.rs
crates/treerag-indexer/src/storage/: mod.rs  snapshot.rs
crates/treerag-indexer/src/tree/: builder.rs  dependency.rs
crates/treerag-indexer/tests/: integration_indexer.rs
crates/treerag-ipc/: Cargo.toml
crates/treerag-ipc/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs
crates/treerag-ipc/tests/: hook_protocol_alignment.rs  integration_ipc.rs
docs/: ARCHITECTURE.md  COMMANDS.md  HOOKS.md  README.md
docs/implementation/: README.md  benchmarks-reference.md  phase-1-daemon-foundation.md  phase-2-indexing-storage.md  phase-3-context-management.md  phase-4-claude-integration.md  phase-5-optimization.md  technical-patterns.md  testing-strategy.md
docs/plans/: README.md  claude-hooks-research.md  memory-requirement-verification.md  memory-system-implementation-plan.md
integration/: com.engram.daemon.plist  com.treerag.daemon.plist
researches/: conversation.md  origin_research.md
