[workspace]
resolver = "2"
members = [
    "crates/treerag-daemon",
    "crates/treerag-core",
    "crates/treerag-ipc",
    "crates/treerag-cli",
    "crates/treerag-indexer",
    "crates/treerag-context",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/treerag"
authors = ["TreeRAG Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
dirs = "5.0"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
libc = "0.2"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4"] }

# Indexing
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
notify = "7.0"
notify-debouncer-full = "0.4"
memmap2 = "0.9"
sha2 = "0.10"
parking_lot = "0.12"

# Internal crates
treerag-core = { path = "crates/treerag-core" }
treerag-ipc = { path = "crates/treerag-ipc" }
treerag-indexer = { path = "crates/treerag-indexer" }
treerag-context = { path = "crates/treerag-context" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

