[package]
name = "engram-core"
description = "Core components for Engram daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }

serde_yaml = { workspace = true }

engram-indexer = { workspace = true }
engram-ipc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
