[package]
name = "engram-ipc"
description = "IPC protocol and client/server for Engram daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
