[package]
name = "treerag-daemon"
description = "TreeRAG daemon process"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "treerag-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

libc = { workspace = true }

treerag-core = { workspace = true }
treerag-context = { workspace = true }
treerag-indexer = { workspace = true }
treerag-ipc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
